Code2Xml.Languages/ANTLRv3/Processors/Lua/LuaParser.cs
using Code2Xml.Languages.ANTLRv3.Core;
using System;
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g 2013-11-10 19:35:43

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Code2Xml.Languages.ANTLRv3.Processors.Lua 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class LuaParser : Antlr.Runtime.Parser, ICustomizedAntlr3Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARSTRING", "COMMENT", "EXP", "EscapeSequence", "FLOAT", "HEX", "HexDigit", "INT", "LINE_COMMENT", "LONGSTRING", "NAME", "NEWLINE", "NORMALSTRING", "OctalEscape", "UnicodeEscape", "WS", "'#'", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'..'", "'...'", "'/'", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'^'", "'and'", "'break'", "'do'", "'else'", "'elseif'", "'end'", "'false'", "'for'", "'function'", "'if'", "'in'", "'local'", "'nil'", "'not'", "'or'", "'repeat'", "'return'", "'then'", "'true'", "'until'", "'while'", "'{'", "'}'", "'~='"
	};
	public const int EOF=-1;
	public const int CHARSTRING=4;
	public const int COMMENT=5;
	public const int EXP=6;
	public const int EscapeSequence=7;
	public const int FLOAT=8;
	public const int HEX=9;
	public const int HexDigit=10;
	public const int INT=11;
	public const int LINE_COMMENT=12;
	public const int LONGSTRING=13;
	public const int NAME=14;
	public const int NEWLINE=15;
	public const int NORMALSTRING=16;
	public const int OctalEscape=17;
	public const int UnicodeEscape=18;
	public const int WS=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;

	public LuaParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public LuaParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		Antlr3AstBuilder treeAdaptor = default(Antlr3AstBuilder);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new Antlr3AstBuilder();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref Antlr3AstBuilder adaptor);

	private Antlr3AstBuilder adaptor;

	public Antlr3AstBuilder TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return LuaParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_chunk();
	partial void LeaveRule_chunk();
	// $ANTLR start "chunk"
	// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:1: public chunk : ( stat ( ';' )? )* ( laststat ( ';' )? )? ;
	[GrammarRule("chunk")]
	public Antlr3AstNode chunk()
	{
		EnterRule_chunk();
		EnterRule("chunk", 1);
		var retval = new Antlr3AstNode("chunk");
		
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal2 = default(IToken);
		IToken char_literal4 = default(IToken);
		Antlr3AstNode stat1 = default(Antlr3AstNode);
		Antlr3AstNode laststat3 = default(Antlr3AstNode);

		object char_literal2_tree = default(object);
		object char_literal4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "chunk");
		DebugLocation(27, 41);
		try
		{
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:7: ( ( stat ( ';' )? )* ( laststat ( ';' )? )? )
			DebugEnterAlt(1);
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:9: ( stat ( ';' )? )* ( laststat ( ';' )? )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(27, 9);
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:9: ( stat ( ';' )? )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==NAME||LA2_1==22||LA2_1==45||(LA2_1>=50 && LA2_1<=52)||LA2_1==54||LA2_1==58||LA2_1==63))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:10: stat ( ';' )?
					{
					DebugLocation(27, 10);
					PushFollow(Follow._stat_in_chunk65);
					stat1=stat();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, stat1.Tree, stat1, retval);
					DebugLocation(27, 15);
					// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:15: ( ';' )?
					int alt1=2;
					try { DebugEnterSubRule(1);
					try { DebugEnterDecision(1, false);
					int LA1_1 = input.LA(1);

					if ((LA1_1==33))
					{
						alt1 = 1;
					}
					} finally { DebugExitDecision(1); }
					switch (alt1)
					{
					case 1:
						DebugEnterAlt(1);
						// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:16: ';'
						{
						DebugLocation(27, 16);
						char_literal2=(IToken)Match(input,33,Follow._33_in_chunk68); if (state.failed) return retval;
						if (state.backtracking == 0) {
						char_literal2_tree = (object)adaptor.Create(char_literal2, retval);
						adaptor.AddChild(root_0, char_literal2_tree);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(1); }


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(27, 24);
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:24: ( laststat ( ';' )? )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==44||LA4_1==59))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:25: laststat ( ';' )?
				{
				DebugLocation(27, 25);
				PushFollow(Follow._laststat_in_chunk75);
				laststat3=laststat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, laststat3.Tree, laststat3, retval);
				DebugLocation(27, 34);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:34: ( ';' )?
				int alt3=2;
				try { DebugEnterSubRule(3);
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==33))
				{
					alt3 = 1;
				}
				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:27:35: ';'
					{
					DebugLocation(27, 35);
					char_literal4=(IToken)Match(input,33,Follow._33_in_chunk78); if (state.failed) return retval;
					if (state.backtracking == 0) {
					char_literal4_tree = (object)adaptor.Create(char_literal4, retval);
					adaptor.AddChild(root_0, char_literal4_tree);
					}

					}
					break;

				}
				} finally { DebugExitSubRule(3); }


				}
				break;

			}
			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("chunk", 1);
			LeaveRule("chunk", 1);
			LeaveRule_chunk();
		}
		DebugLocation(27, 41);
		} finally { DebugExitRule(GrammarFileName, "chunk"); }
		return retval;

	}
	// $ANTLR end "chunk"

	partial void EnterRule_block();
	partial void LeaveRule_block();
	// $ANTLR start "block"
	// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:29:1: block : chunk ;
	[GrammarRule("block")]
	private Antlr3AstNode block()
	{
		EnterRule_block();
		EnterRule("block", 2);
		var retval = new Antlr3AstNode("block");
		
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		Antlr3AstNode chunk5 = default(Antlr3AstNode);

		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(29, 13);
		try
		{
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:29:7: ( chunk )
			DebugEnterAlt(1);
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:29:9: chunk
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(29, 9);
			PushFollow(Follow._chunk_in_block90);
			chunk5=chunk();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, chunk5.Tree, chunk5, retval);

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("block", 2);
			LeaveRule("block", 2);
			LeaveRule_block();
		}
		DebugLocation(29, 13);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return retval;

	}
	// $ANTLR end "block"

	partial void EnterRule_stat();
	partial void LeaveRule_stat();
	// $ANTLR start "stat"
	// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:31:1: stat : ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? );
	[GrammarRule("stat")]
	private Antlr3AstNode stat()
	{
		EnterRule_stat();
		EnterRule("stat", 3);
		var retval = new Antlr3AstNode("stat");
		
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal7 = default(IToken);
		IToken string_literal10 = default(IToken);
		IToken string_literal12 = default(IToken);
		IToken string_literal13 = default(IToken);
		IToken string_literal15 = default(IToken);
		IToken string_literal17 = default(IToken);
		IToken string_literal18 = default(IToken);
		IToken string_literal20 = default(IToken);
		IToken string_literal22 = default(IToken);
		IToken string_literal24 = default(IToken);
		IToken string_literal26 = default(IToken);
		IToken string_literal28 = default(IToken);
		IToken string_literal30 = default(IToken);
		IToken string_literal32 = default(IToken);
		IToken string_literal33 = default(IToken);
		IToken NAME34 = default(IToken);
		IToken char_literal35 = default(IToken);
		IToken char_literal37 = default(IToken);
		IToken char_literal39 = default(IToken);
		IToken string_literal41 = default(IToken);
		IToken string_literal43 = default(IToken);
		IToken string_literal44 = default(IToken);
		IToken string_literal46 = default(IToken);
		IToken string_literal48 = default(IToken);
		IToken string_literal50 = default(IToken);
		IToken string_literal51 = default(IToken);
		IToken string_literal54 = default(IToken);
		IToken string_literal55 = default(IToken);
		IToken NAME56 = default(IToken);
		IToken string_literal58 = default(IToken);
		IToken char_literal60 = default(IToken);
		Antlr3AstNode varlist16 = default(Antlr3AstNode);
		Antlr3AstNode explist18 = default(Antlr3AstNode);
		Antlr3AstNode functioncall9 = default(Antlr3AstNode);
		Antlr3AstNode block11 = default(Antlr3AstNode);
		Antlr3AstNode exp14 = default(Antlr3AstNode);
		Antlr3AstNode block16 = default(Antlr3AstNode);
		Antlr3AstNode block19 = default(Antlr3AstNode);
		Antlr3AstNode exp21 = default(Antlr3AstNode);
		Antlr3AstNode exp23 = default(Antlr3AstNode);
		Antlr3AstNode block25 = default(Antlr3AstNode);
		Antlr3AstNode exp27 = default(Antlr3AstNode);
		Antlr3AstNode block29 = default(Antlr3AstNode);
		Antlr3AstNode block31 = default(Antlr3AstNode);
		Antlr3AstNode exp36 = default(Antlr3AstNode);
		Antlr3AstNode exp38 = default(Antlr3AstNode);
		Antlr3AstNode exp40 = default(Antlr3AstNode);
		Antlr3AstNode block42 = default(Antlr3AstNode);
		Antlr3AstNode namelist45 = default(Antlr3AstNode);
		Antlr3AstNode explist147 = default(Antlr3AstNode);
		Antlr3AstNode block49 = default(Antlr3AstNode);
		Antlr3AstNode funcname52 = default(Antlr3AstNode);
		Antlr3AstNode funcbody53 = default(Antlr3AstNode);
		Antlr3AstNode funcbody57 = default(Antlr3AstNode);
		Antlr3AstNode namelist59 = default(Antlr3AstNode);
		Antlr3AstNode explist161 = default(Antlr3AstNode);

		object char_literal7_tree = default(object);
		object string_literal10_tree = default(object);
		object string_literal12_tree = default(object);
		object string_literal13_tree = default(object);
		object string_literal15_tree = default(object);
		object string_literal17_tree = default(object);
		object string_literal18_tree = default(object);
		object string_literal20_tree = default(object);
		object string_literal22_tree = default(object);
		object string_literal24_tree = default(object);
		object string_literal26_tree = default(object);
		object string_literal28_tree = default(object);
		object string_literal30_tree = default(object);
		object string_literal32_tree = default(object);
		object string_literal33_tree = default(object);
		object NAME34_tree = default(object);
		object char_literal35_tree = default(object);
		object char_literal37_tree = default(object);
		object char_literal39_tree = default(object);
		object string_literal41_tree = default(object);
		object string_literal43_tree = default(object);
		object string_literal44_tree = default(object);
		object string_literal46_tree = default(object);
		object string_literal48_tree = default(object);
		object string_literal50_tree = default(object);
		object string_literal51_tree = default(object);
		object string_literal54_tree = default(object);
		object string_literal55_tree = default(object);
		object NAME56_tree = default(object);
		object string_literal58_tree = default(object);
		object char_literal60_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "stat");
		DebugLocation(31, 37);
		try
		{
			// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:31:6: ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? )
			int alt9=11;
			try { DebugEnterDecision(9, false);
			switch (input.LA(1))
			{
			case NAME:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt9 = 1;
				}
				else if ((EvaluatePredicate(synpred6_Lua_fragment)))
				{
					alt9 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 22:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt9 = 1;
				}
				else if ((EvaluatePredicate(synpred6_Lua_fragment)))
				{
					alt9 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 45:
				{
				alt9 = 3;
				}
				break;
			case 63:
				{
				alt9 = 4;
				}
				break;
			case 58:
				{
				alt9 = 5;
				}
				break;
			case 52:
				{
				alt9 = 6;
				}
				break;
			case 50:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred14_Lua_fragment)))
				{
					alt9 = 7;
				}
				else if ((EvaluatePredicate(synpred15_Lua_fragment)))
				{
					alt9 = 8;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 7, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 51:
				{
				alt9 = 9;
				}
				break;
			case 54:
				{
				int LA9_2 = input.LA(2);

				if ((EvaluatePredicate(synpred17_Lua_fragment)))
				{
					alt9 = 10;
				}
				else if ((true))
				{
					alt9 = 11;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 9, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 9, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(9); }
			switch (alt9)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:31:9: varlist1 '=' explist1
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(31, 9);
				PushFollow(Follow._varlist1_in_stat99);
				varlist16=varlist1();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, varlist16.Tree, varlist16, retval);
				DebugLocation(31, 18);
				char_literal7=(IToken)Match(input,36,Follow._36_in_stat101); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal7_tree = (object)adaptor.Create(char_literal7, retval);
				adaptor.AddChild(root_0, char_literal7_tree);
				}
				DebugLocation(31, 22);
				PushFollow(Follow._explist1_in_stat103);
				explist18=explist1();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, explist18.Tree, explist18, retval);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:32:5: functioncall
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(32, 5);
				PushFollow(Follow._functioncall_in_stat112);
				functioncall9=functioncall();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, functioncall9.Tree, functioncall9, retval);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:33:5: 'do' block 'end'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(33, 5);
				string_literal10=(IToken)Match(input,45,Follow._45_in_stat121); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal10_tree = (object)adaptor.Create(string_literal10, retval);
				adaptor.AddChild(root_0, string_literal10_tree);
				}
				DebugLocation(33, 10);
				PushFollow(Follow._block_in_stat123);
				block11=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block11.Tree, block11, retval);
				DebugLocation(33, 16);
				string_literal12=(IToken)Match(input,48,Follow._48_in_stat125); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal12_tree = (object)adaptor.Create(string_literal12, retval);
				adaptor.AddChild(root_0, string_literal12_tree);
				}

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:34:5: 'while' exp 'do' block 'end'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(34, 5);
				string_literal13=(IToken)Match(input,63,Follow._63_in_stat134); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal13_tree = (object)adaptor.Create(string_literal13, retval);
				adaptor.AddChild(root_0, string_literal13_tree);
				}
				DebugLocation(34, 13);
				PushFollow(Follow._exp_in_stat136);
				exp14=exp();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, exp14.Tree, exp14, retval);
				DebugLocation(34, 17);
				string_literal15=(IToken)Match(input,45,Follow._45_in_stat138); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal15_tree = (object)adaptor.Create(string_literal15, retval);
				adaptor.AddChild(root_0, string_literal15_tree);
				}
				DebugLocation(34, 22);
				PushFollow(Follow._block_in_stat140);
				block16=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block16.Tree, block16, retval);
				DebugLocation(34, 28);
				string_literal17=(IToken)Match(input,48,Follow._48_in_stat142); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal17_tree = (object)adaptor.Create(string_literal17, retval);
				adaptor.AddChild(root_0, string_literal17_tree);
				}

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:35:5: 'repeat' block 'until' exp
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(35, 5);
				string_literal18=(IToken)Match(input,58,Follow._58_in_stat151); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal18_tree = (object)adaptor.Create(string_literal18, retval);
				adaptor.AddChild(root_0, string_literal18_tree);
				}
				DebugLocation(35, 14);
				PushFollow(Follow._block_in_stat153);
				block19=block();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, block19.Tree, block19, retval);
				DebugLocation(35, 20);
				string_literal20=(IToken)Match(input,62,Follow._62_in_stat155); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal20_tree = (object)adaptor.Create(string_literal20, retval);
				adaptor.AddChild(root_0, string_literal20_tree);
				}
				DebugLocation(35, 28);
				PushFollow(Follow._exp_in_stat157);
				exp21=exp();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, exp21.Tree, exp21, retval);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// C:\\Users\\exKAZUu\\Projects\\Code2Xml\\Code2Xml.Languages\\ANTLRv3\\Processors\\Lua\\Lua.g:36:5: 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end'
				{
				root_0 = (object)adaptor.Nil();
